# Vox

./: .gitignore  AGENTS.md  CONTRIBUTORS  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/vox-lsp/: Cargo.toml
crates/vox-lsp/src/: lib.rs  main.rs  server.rs
crates/vox-runtime/: Cargo.toml
crates/vox-runtime/src/: analysis.rs  artifact_store.rs  handles.rs  host_exports.rs  interpreter.rs  lib.rs  main.rs  mir_executor.rs  protocol.rs  remote.rs  runner.rs  server.rs  session.rs  wasm_executor.rs
crates/vox-runtime/tests/: compiler_fixture_suite.rs
crates/vox-runtime/tests/fixtures/compiler/compile_ok/: block_positions.vox  blocks_nested.vox  complex_expressions.vox  deeply_nested.vox  econ_expressions.vox  evil_script.vox  for_loops_variants.vox  if_chains.vox  import_alias.vox  import_full.vox  import_selective.vox  import_selective_as.vox  lambdas.vox  literals_advanced.vox  method_chains.vox  methods.vox  null_safety.vox  operators_precedence.vox  package_surface.vox  ranges.vox  rust_external_surface.vox  syntax_surface.vox  when_expr.vox
crates/vox-runtime/tests/fixtures/compiler/extern_ok/: extern_list_string.vox  extern_nullable_list.vox  extern_struct_use.vox
crates/vox-runtime/tests/fixtures/compiler/semantic_fail/: arithmetic_type_mismatch.vox  assign_to_val.vox  bad_compound_val.vox  bad_updated_assignment.vox  call_non_function.vox  divide_string.vox  for_in_non_iterable.vox  for_non_bool_condition.vox  for_non_iterable.vox  func_shadow.vox  if_condition_not_bool.vox  index_non_list.vox  missing_import_manifest.vox  multiply_bool_int.vox  negate_non_bool.vox  null_op_on_non_nullable.vox  return_type_mismatch.vox  rust_import_missing_symbol.vox  rust_import_wrong_argument.vox  type_mismatch_value.vox  unknown_name.vox  when_not_exhaustive.vox  wrong_arg_type.vox
crates/vox-runtime/tests/fixtures/compiler/semantic_ok/: accepted_package.vox  accepted_script.vox  ackermann.vox  binary_search.vox  builtin_methods.vox  collatz.vox  compound_assign.vox  control_flow.vox  digit_ops.vox  fibonacci_iterative.vox  gcd_lcm.vox  generics.vox  higher_order.vox  list_ops.vox  math_functions.vox  method_call.vox  more_builtins.vox  nested_func_scopes.vox  newton_sqrt.vox  palindrome.vox  param_defaults.vox  power.vox  prime.vox  record_update.vox  recursion.vox  return_value.vox  rust_external_library_import.vox  rust_external_package_import.vox  shadow_scope.vox  sorting.vox  string_interp_advanced.vox  string_ops.vox  summation.vox  tuple_record.vox  (+4 more)
(+117 files in other folders)
