[workspace]
members = [
    "crates/vox-core",
    "crates/vox-compiler",
    "crates/vox-runtime",
    "crates/vox-repl",
    "crates/vox-lsp",
    "integrations/rust/crates/voxlib-macros",
    "integrations/rust/crates/voxlib-sdk",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
camino = "1.2"
inventory = "0.3"
rustyline = "18.0"
serde_json = "1"
thiserror = "2.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-std", "io-util"] }
tower-lsp = "0.20"
wasm-encoder = "0.221"
wasmtime = "29"
