[package]
name = "vox-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vox-lsp"
path = "src/main.rs"

[dependencies]
serde_json.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
vox-compiler = { path = "../vox-compiler" }
vox-core = { path = "../vox-core" }
