[package]
name = "vox-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
vox-compiler = { path = "../vox-compiler" }
vox-core = { path = "../vox-core" }

[[bin]]
name = "dev-mounted-library-example"
path = "../../dev/mounted_library_runner.rs"
